--- a/package.json
+++ b/package.json
@@ -8,20 +8,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.20.0",
-    "core-js": "^3.6.5",
-    "vue": "^2.6.12"
+    "axios": "^0.21.1",
+    "core-js": "^3.12.1",
+    "vue": "^3.1.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-eslint": "~4.5.4",
-    "@vue/cli-service": "~4.5.4",
-    "@vue/cli-plugin-babel": "~4.5.4",
+    "@vue/cli-plugin-babel": "^4.5.13",
+    "@vue/cli-plugin-eslint": "^4.5.13",
+    "@vue/cli-service": "^4.5.13",
+    "@vue/compiler-sfc": "^3.1.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.12",
-    "node-sass": "^4.14.1",
-    "sass-loader": "^10.0.1"
+    "eslint-plugin-vue": "^7.9.0",
+    "sass": "^1.35.1",
+    "sass-loader": "^12.1.0"
   },
   "eslintConfig": {
     "root": true,
